--- a/app/views/contacts/summary.html.erb
+++ b/app/views/contacts/summary.html.erb
@@ -7,18 +7,6 @@
 
 <section>
   <%= render 'layouts/breadcrumbs' %>
-  <!--    <h1 class="text-xl font-bold">Generate Reports</h1>-->
-
-  <!--    <div class="flex">-->
-  <!--        <span class="mt-2 inline-flex rounded-md shadow-sm">-->
-  <%#= link_to 'Download Full Report', contacts_path(format: :csv), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
-  <!--        </span>-->
-  <!--    </div>-->
-
-  <!--    <div class="mt-6 flex">-->
-  <%#= link_to 'Non Medical Needs Report', generate_non_medical_reqs_contacts_path(format: :csv), class: 'inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-  <%#= link_to 'Medical Needs Report', generate_medical_reqs_contacts_path(format: :csv), class: 'ml-4 inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150' %>
-  <!--    </div>-->
   <div class="mt-8">
     <h3 class="font-bold text-xl">Dashboard</h3>
     <div class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
@@ -185,7 +173,7 @@
   </div>
 </div>
 <div class="mt-4 flex flex-col">
-  <div class="-my-2 py-2 overflow-x-scroll sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
+  <div class="-my-2 py-2 sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
     <div class="align-middle inline-block min-w-full shadow overflow-hidden sm:rounded-lg border-b border-gray-200">
       <table class="min-w-full">
         <thead>
@@ -194,16 +182,10 @@
               ID
             </th>
             <th class="md:w-4/12 px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-              Name
-            </th>
-            <th class="md:w-1/12 px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-              Consultation
+              Name & Category
             </th>
             <th class="md:w-2/12 px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
               Requested
-            </th>
-            <th class="md:w-1/12 px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
-              Category
             </th>
             <th class="md:w-2/12 px-6 py-3 border-b border-gray-200 bg-gray-50 text-center text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider">
               Status
@@ -220,19 +202,17 @@
           <tr class="hover:text-gray-100 cursor-pointer">
             <td class="md:w-1/12 px-6 py-4 whitespace-no-wrap border-b border-gray-200 text-sm leading-5 font-medium text-gray-900">
               <%= link_to "#{c.contact.uid}", consultation_path(c) %>
+              <div>
+                <%= c.consultation_type %>
+              </div>
             </td>
             <td class="md:w-4/12 px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500 text-blue-600">
               <%= link_to c.contact.name, contact_path(c.contact), class: 'mr-2 font-medium' %>
-            </td>
-            <td class="md:w-1/12 px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
-              <%= c.consultation_type %>
+              <%= c.category&.titleize %>
             </td>
             <td class="md:w-2/12 px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
               <%= time_ago_in_words(c.created_at) %> ago
               <div class="text-sm"><%= c.created_at.strftime("%m/%d/%Y at %I:%M%p") %></div>
-            </td>
-            <td class="md:w-1/12 px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
-              <%= c.category&.titleize %>
             </td>
             <td class="md:w-2/12 px-6 py-4 whitespace-no-wrap text-center border-b border-gray-200 text-sm leading-5 text-gray-500">
               <div class="flex flex-col items-start">
